// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DiagnosticsPanel > renders logs for all channels and filters by selected tab > diagnostics-panel-risk-view 1`] = `
<div>
  <div
    aria-label="Sandbox Diagnostics Panel"
    class="fixed bottom-4 right-4 w-96 h-96 bg-black/90 border border-white/20 rounded-lg p-4 text-white overflow-hidden flex flex-col"
    data-testid="sandbox-diagnostics-panel"
    role="region"
  >
    <div
      class="flex justify-between items-center mb-2"
    >
      <h3
        class="text-sm font-semibold"
      >
        Sandbox Diagnostics
      </h3>
      <div
        class="flex gap-2"
      >
        <button
          class="text-xs px-2 py-1 bg-blue-600 rounded"
        >
          Export
        </button>
        <button
          class="text-xs px-2 py-1 bg-red-600 rounded"
        >
          Clear
        </button>
      </div>
    </div>
    <div
      class="flex gap-2 mb-2"
    >
      <label
        class="sr-only"
        for="diagnostics-channel-filter"
      >
        Diagnostics channel filter
      </label>
      <select
        class="text-xs bg-gray-800 px-2 py-1 rounded"
        id="diagnostics-channel-filter"
      >
        <option
          value="all"
        >
          All
        </option>
        <option
          value="picker"
        >
          Picker
        </option>
        <option
          value="validators"
        >
          Validators
        </option>
        <option
          value="risk"
        >
          Risk
        </option>
        <option
          value="theater"
        >
          Theater
        </option>
      </select>
      <label
        class="sr-only"
        for="diagnostics-time-filter"
      >
        Diagnostics time filter
      </label>
      <select
        class="text-xs bg-gray-800 px-2 py-1 rounded"
        id="diagnostics-time-filter"
      >
        <option
          value="1"
        >
          1 min
        </option>
        <option
          value="5"
        >
          5 min
        </option>
        <option
          value="15"
        >
          15 min
        </option>
        <option
          value="60"
        >
          1 hour
        </option>
        <option
          value="180"
        >
          3 hours
        </option>
      </select>
    </div>
    <div
      class="flex-1 overflow-y-auto text-xs space-y-1"
      data-testid="diagnostic-log-list"
    >
      <div
        class="bg-gray-800/50 p-2 rounded"
        data-channel="risk"
        data-testid="diagnostic-entry"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="font-mono text-gray-400"
          >
            6:46:30 PM
          </span>
          <span
            class="px-1 rounded text-xs bg-gray-600"
            data-testid="diagnostic-level"
          >
            debug
          </span>
        </div>
        <div
          class="font-semibold"
          data-testid="diagnostic-scope"
        >
          RiskDiagnostics
          : 
          Risk snapshot
        </div>
        <pre
          class="text-gray-400 mt-1"
          data-testid="diagnostic-payload"
        >
          {
  "injury": 45,
  "death": 12
}
        </pre>
      </div>
    </div>
  </div>
</div>
`;

exports[`DiagnosticsPanel > renders logs for all channels and filters by selected tab > diagnostics-panel-validator-view 1`] = `
<div>
  <div
    aria-label="Sandbox Diagnostics Panel"
    class="fixed bottom-4 right-4 w-96 h-96 bg-black/90 border border-white/20 rounded-lg p-4 text-white overflow-hidden flex flex-col"
    data-testid="sandbox-diagnostics-panel"
    role="region"
  >
    <div
      class="flex justify-between items-center mb-2"
    >
      <h3
        class="text-sm font-semibold"
      >
        Sandbox Diagnostics
      </h3>
      <div
        class="flex gap-2"
      >
        <button
          class="text-xs px-2 py-1 bg-blue-600 rounded"
        >
          Export
        </button>
        <button
          class="text-xs px-2 py-1 bg-red-600 rounded"
        >
          Clear
        </button>
      </div>
    </div>
    <div
      class="flex gap-2 mb-2"
    >
      <label
        class="sr-only"
        for="diagnostics-channel-filter"
      >
        Diagnostics channel filter
      </label>
      <select
        class="text-xs bg-gray-800 px-2 py-1 rounded"
        id="diagnostics-channel-filter"
      >
        <option
          value="all"
        >
          All
        </option>
        <option
          value="picker"
        >
          Picker
        </option>
        <option
          value="validators"
        >
          Validators
        </option>
        <option
          value="risk"
        >
          Risk
        </option>
        <option
          value="theater"
        >
          Theater
        </option>
      </select>
      <label
        class="sr-only"
        for="diagnostics-time-filter"
      >
        Diagnostics time filter
      </label>
      <select
        class="text-xs bg-gray-800 px-2 py-1 rounded"
        id="diagnostics-time-filter"
      >
        <option
          value="1"
        >
          1 min
        </option>
        <option
          value="5"
        >
          5 min
        </option>
        <option
          value="15"
        >
          15 min
        </option>
        <option
          value="60"
        >
          1 hour
        </option>
        <option
          value="180"
        >
          3 hours
        </option>
      </select>
    </div>
    <div
      class="flex-1 overflow-y-auto text-xs space-y-1"
      data-testid="diagnostic-log-list"
    >
      <div
        class="bg-gray-800/50 p-2 rounded"
        data-channel="validators"
        data-testid="diagnostic-entry"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="font-mono text-gray-400"
          >
            6:46:20 PM
          </span>
          <span
            class="px-1 rounded text-xs bg-yellow-600"
            data-testid="diagnostic-level"
          >
            warn
          </span>
        </div>
        <div
          class="font-semibold"
          data-testid="diagnostic-scope"
        >
          ValidatorDiagnostics
          : 
          Drop blocked
        </div>
        <pre
          class="text-gray-400 mt-1"
          data-testid="diagnostic-payload"
        >
          {
  "reason": "fatigue"
}
        </pre>
      </div>
    </div>
  </div>
</div>
`;
